--- a/index-ru.html
+++ b/index-ru.html
@@ -399,9 +399,9 @@ Jūs esat Lieliski🙌</p>
         <div class="small-rect">
           <img src="assets/svg/small_contacts_rectangle.svg"
                alt="SmallRect" class="rect-bg" />
-          <a href="#" class="rect-link">
-            <img src="assets/svg/phone_icon.svg" alt="Phone" class="rect-icon" />
-            <a class="phone" href="tel:+37126090299">+371 26 090 299</a>
+          <a href="tel:+37126090299" class="rect-link">
+            <img src="assets/svg/phone_icon.svg" alt="Telefons" class="rect-icon" />
+            <span class="rect-text">+371 26 090 299</span>
           </a>
         </div>
         
@@ -550,6 +550,42 @@ Jūs esat Lieliski🙌</p>
   </div>
 </div>
 
+<div class="popup" id="privacyPopup">
+  <div class="popup-close">
+    <img src="assets/svg/cross.svg" alt="Закрыть" class="cross">
+  </div>
+
+  <div class="popup-content privacy-content">
+    <h2 class="popup-title">Правила обработки персональных данных</h2>
+
+<div class="privacy-scroll">
+
+  <p>Данный сайт <strong>www.loftdesign.lv</strong> принадлежит SIA «LOFTdesign».</p>
+
+  <p>На этом сайте вы можете добровольно отправить форму заявки, указав следующие данные:</p>
+  <ul>
+    <li>Имя, Фамилию</li>
+    <li>Номер телефона</li>
+    <li>E-mail</li>
+  </ul>
+
+  <p>Обработка ваших персональных данных осуществляется в соответствии с требованиями Закона «О защите персональных данных физических лиц» и других действующих нормативных актов. Эти данные необходимы, чтобы понять ваши потребности, связаться с вами и предоставить наилучший сервис.</p>
+<br>
+  <p>Кроме того, при посещении этого сайта мы можем собирать техническую информацию, не идентифицирующую вас по имени. Такая информация может включать ваш IP-адрес, посещённые страницы, а также браузер, которым вы пользовались для просмотра нашего сайта. Эти технические данные используются для повышения эффективности сайта, диагностики проблем сервера, администрирования ресурса и анализа трафика.</p>
+<br>
+  <p>Персональные данные клиентов доступны только сотрудникам SIA «LOFTdesign» и не передаются третьим лицам. Передача клиентских данных третьим лицам возможна только в следующих случаях:</p>
+  <ul>
+    <li>если этого требует действующее законодательство;</li>
+    <li>если получен прямой запрос клиента.</li>
+  </ul>
+
+  <p>В соответствии с Законом Латвийской Республики «О защите персональных данных физических лиц» и другими нормативными актами клиент имеет право ознакомиться с информацией о целях использования его персональных данных. Вы вправе требовать исправления или изменения своих данных, а также прекращения их обработки.</p>
+<br>
+  <p>Сайт разработал Кирилл Голядинец — <a href="https://bento.me/et3rn1ty" class="ete-link" target="_blank">https://bento.me/et3rn1ty</a></p>
+
+</div>
+  </div>
+</div>
 
 <div class="popup-overlay"></div>
 
@@ -569,6 +605,7 @@ Jūs esat Lieliski🙌</p>
       </a>
     </div>
 
+    <a href="#" class="footer-privacy">Правила обработки персональных данных</a>
     
     <div class="footer-info">
       <p class="copyright">© 2023 LOFTdesign. Все права защищены.</p>
