--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1>Mēbeļu izgatavošana pēc pasūtījuma</h1>
 
     <div class="subtitle-row">
-      <p class="subtitle">Individuālas mēbeles Jūsu mājai vai birojam</p>
+      <p class="subtitle">Individuālas mēbeles jūsu mājai vai birojam</p>
       <img src="assets/svg/line_head.svg" alt="Līnija" class="subtitle-line" />
     </div>
 
@@ -491,6 +491,43 @@ Jūs esat Lieliski🙌</p>
   </div>
 </div>
 
+<div class="popup" id="privacyPopup">
+  <div class="popup-close">
+    <img src="assets/svg/cross.svg" alt="Закрыть" class="cross">
+  </div>
+
+  <div class="popup-content privacy-content">
+    <h2 class="popup-title">Personas datu apstrādes noteikumi</h2>
+
+<div class="privacy-scroll">
+
+  <p>Šī mājas lapa <strong>www.loftdesign.lv</strong> pieder SIA “LOFTdesign”.</p>
+
+  <p>Šajā mājas lapā ir iespēja brīvprātīgi nosūtīt pieteikuma formu, norādot šādus datus:</p>
+  <ul>
+    <li>Vārdu, Uzvārdu</li>
+    <li>Tālruņa numuru</li>
+    <li>E-pastu</li>
+  </ul>
+
+  <p>Jūsu personīgo datu apstrāde notiek saskaņā ar „Fizisko personu datu aizsardzības likuma” prasībām un citām esošajām normatīvajām prasībām. Šī informācija nepieciešama, lai izprastu Jūsu vajadzības, sazinātos ar Jums un sniegtu vislabāko apkalpošanu.</p>
+<br>
+  <p>Turklāt, apmeklējot šo mājaslapu, mēs varam ievākt tehnisko informāciju, kas neidentificē Jūs pēc vārda. Šāda veida informācija var sevī ietvert Jūsu IP adresi, mājaslapas, kuras esat apmeklējis, kā arī pārlūkprogrammu, kuru esat izmantojis mūsu mājaslapu apmeklēšanai. Šie tehniskie dati tiek izmantoti mūsu mājaslapu efektivitātes mērījumiem un tās paaugstināšanai, mūsu servera problēmu diagnostikai, mājaslapu administrēšanai un plūsmas pārskatīšanai.</p>
+<br>
+  <p>Klientu privātie dati pieejami tikai SIA “LOFTdesign” darbiniekiem. Klientu privātie dati netiek nodoti trešajām personām. SIA “LOFTdesign” klientu privātos datus trešajām personām var nodot tikai šādos gadījumos:</p>
+  <ul>
+    <li>ja to pieprasa esošā likumdošana;</li>
+    <li>ja saņemts klienta tiešs pieprasījums.</li>
+  </ul>
+
+  <p>Saskaņā ar Latvijas Republikas „Fizisko personu datu aizsardzības likumu” un citām esošajām normatīvajām prasībām, klients ir tiesīgs iepazīties ar informāciju par to, kādiem mērķiem tiek izmantoti viņa personīgie dati. Jums ir tiesības pieprasīt jūsu personīgo datu labošanu vai izmaiņu, tāpat pieprasīt personīgās informācijas apstrādes pārtraukšanu.</p>
+<br>
+  <p>Mājaslapas izstrādi veica Kirils Goljadinecs — <a href="https://bento.me/et3rn1ty" class="ete-link" target="_blank">https://bento.me/et3rn1ty</a></p>
+
+</div>
+  </div>
+</div>
+
 <div class="popup-overlay"></div>
 
   <script src="script.js"></script>
@@ -502,6 +539,9 @@ Jūs esat Lieliski🙌</p>
         <img src="assets/svg/logo_footer.svg" alt="LOFTdesign" />
       </a>
     </div>
+
+<a href="#" class="footer-privacy">Personas datu apstrādes noteikumi</a>
+    
     <div class="footer-info">
       <p class="copyright">© 2025 LOFTdesign. Visas tiesības aizsargātas.</p>
     </div>
