--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8">
   <title>LOFTdesign — Mēbeļu izgatavošana pēc pasūtījuma</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:type"        content="website">
+<meta property="og:url"         content="https://loftdesign.lv/">
+<meta property="og:title"       content="LOFTdesign — mēbeles pēc pasūtījuma">
+<meta property="og:description" content="Individuālas virtuves, skapji un citi projekti visā Latvijā">
+<meta property="og:image"       content="/assets/images/og-preview.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="icon" type="image/svg+xml" href="assets/svg/favicon.svg">
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js" defer></script>
