--- a/index-ru.html
+++ b/index-ru.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <title>LOFTdesign — Изготовление мебели на заказ</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:url"         content="https://loftdesign.lv/">
+  <meta property="og:url"         content="https://dazzling-figolla-71c79b.netlify.app/">
 <meta property="og:title"       content="LOFTdesign — mēbeles pēc pasūtījuma">
 <meta property="og:description" content="Individuālas virtuves, skapji un citi projekti visā Latvijā">
 <meta property="og:image"       content="/assets/images/og-preview.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/svg+xml" href="assets/svg/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/svg/favicon.svg">
+<link rel="apple-touch-icon" sizes="180x180" href="assets/svg/favicon.svg">
+<link rel="shortcut icon" href="assets/svg/favicon.svg">
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
 
