--- a/ru/index.html
+++ b/ru/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>LOFTdesign — Изготовление мебели на заказ</title>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:url"         content="https://dazzling-figolla-71c79b.netlify.app/">
+  <meta property="og:url"         content="https://loftdesign.lv/">
 <meta property="og:title"       content="LOFTdesign — mēbeles pēc pasūtījuma">
 <meta property="og:description" content="Individuālas virtuves, skapji un citi projekti visā Latvijā">
 <meta property="og:image"       content="/assets/images/og-preview.png">
   <link rel="stylesheet" href="styles.css">
+  <link rel="alternate" href="https://loftdesign.lv/"    hreflang="lv">
+<link rel="alternate" href="https://loftdesign.lv/ru/" hreflang="ru">
   <link rel="icon" type="image/svg+xml" href="assets/svg/favicon.svg">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/svg/favicon.svg">
 <link rel="apple-touch-icon" sizes="180x180" href="assets/svg/favicon.svg">
