--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   <link rel="alternate" href="https://loftdesign.lv/"    hreflang="lv">
 <link rel="alternate" href="https://loftdesign.lv/ru/" hreflang="ru">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-  <link rel="icon" type="image/svg+xml" href="assets/svg/favicon.svg">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/svg/favicon.svg">
-<link rel="apple-touch-icon" sizes="180x180" href="assets/svg/favicon.svg">
-<link rel="shortcut icon" href="assets/svg/favicon.svg">
+  
+<link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32.png">
+<link rel="shortcut icon"            href="assets/icons/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.2/lottie.min.js" defer></script>
