--- a/ru/index.html
+++ b/ru/index.html
@@ -12,10 +12,12 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="alternate" href="https://loftdesign.lv/"    hreflang="lv">
 <link rel="alternate" href="https://loftdesign.lv/ru/" hreflang="ru">
-  <link rel="icon" type="image/svg+xml" href="assets/svg/favicon.svg">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/svg/favicon.svg">
-<link rel="apple-touch-icon" sizes="180x180" href="assets/svg/favicon.svg">
-<link rel="shortcut icon" href="assets/svg/favicon.svg">
+
+<link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32.png">
+<link rel="shortcut icon"            href="assets/icons/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
 
