--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="alternate" href="https://loftdesign.lv/"    hreflang="lv">
 <link rel="alternate" href="https://loftdesign.lv/ru/" hreflang="ru">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-  
+
 <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
 <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32.png">
 <link rel="shortcut icon"            href="assets/icons/favicon.ico">
@@ -139,8 +139,8 @@
       </div>
 
       <div class="projects-categories">
-        <span data-category="Bathroom">Vannas istabas</span>
         <span data-category="Kitchen">Virtuves</span>
+        <span data-category="Bathroom">Vannas istabas</span>
         <span data-category="Wardrobe">Skapji</span>
         <span data-category="Hallway">Priekštelpas</span>
         <span data-category="Table">Galdi</span>
@@ -535,7 +535,7 @@ Jūs esat Lieliski🙌</p>
 
   <p>Saskaņā ar Latvijas Republikas „Fizisko personu datu aizsardzības likumu” un citām esošajām normatīvajām prasībām, klients ir tiesīgs iepazīties ar informāciju par to, kādiem mērķiem tiek izmantoti viņa personīgie dati. Jums ir tiesības pieprasīt jūsu personīgo datu labošanu vai izmaiņu, tāpat pieprasīt personīgās informācijas apstrādes pārtraukšanu.</p>
 <br>
-  <p>Mājaslapas izstrādi veica Kirils Goljadinecs — <a href="https://bento.me/et3rn1ty" class="ete-link" target="_blank">https://bento.me/et3rn1ty</a></p>
+  <p>Mājaslapas izstrāde — <a href="https://bento.me/et3rn1ty" class="ete-link" target="_blank">https://bento.me/et3rn1ty</a></p>
 
 </div>
   </div>
