--- a/ru/index.html
+++ b/ru/index.html
@@ -8,7 +8,7 @@
   <meta property="og:url"         content="https://loftdesign.lv/">
 <meta property="og:title"       content="LOFTdesign — mēbeles pēc pasūtījuma">
 <meta property="og:description" content="Individuālas virtuves, skapji un citi projekti visā Latvijā">
-<meta property="og:image"       content="/assets/images/og-preview.png">
+<meta property="og:image"       content="/assets/images/og-preview_ru.png">
   <link rel="stylesheet" href="styles.css">
   <link rel="alternate" href="https://loftdesign.lv/"    hreflang="lv">
 <link rel="alternate" href="https://loftdesign.lv/ru/" hreflang="ru">
@@ -159,8 +159,8 @@
       </div>
 
       <div class="projects-categories">
-        <span data-category="Bathroom">Ванные Комнаты</span>
         <span data-category="Kitchen">Кухни</span>
+        <span data-category="Bathroom">Ванные Комнаты</span>
         <span data-category="Wardrobe">Шкафы</span>
         <span data-category="Hallway">Прихожие</span>
         <span data-category="Table">Столы</span>
@@ -592,7 +592,7 @@ Jūs esat Lieliski🙌</p>
 
   <p>В соответствии с Законом Латвийской Республики «О защите персональных данных физических лиц» и другими нормативными актами клиент имеет право ознакомиться с информацией о целях использования его персональных данных. Вы вправе требовать исправления или изменения своих данных, а также прекращения их обработки.</p>
 <br>
-  <p>Сайт разработал Кирилл Голядинец — <a href="https://bento.me/et3rn1ty" class="ete-link" target="_blank">https://bento.me/et3rn1ty</a></p>
+  <p>Разработка сайта — <a href="https://bento.me/et3rn1ty" class="ete-link" target="_blank">https://bento.me/et3rn1ty</a></p>
 
 </div>
   </div>
