--- a/ru/index.html
+++ b/ru/index.html
@@ -619,7 +619,7 @@ Jūs esat Lieliski🙌</p>
     <a href="#" class="footer-privacy">Правила обработки персональных данных</a>
     
     <div class="footer-info">
-      <p class="copyright">© 2023 LOFTdesign. Все права защищены.</p>
+      <p class="copyright">© 2025 LOFTdesign. Все права защищены.</p>
     </div>
 
   </div>
@@ -628,14 +628,14 @@ Jūs esat Lieliski🙌</p>
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   const btn = document.querySelector('.lang-switch');
-  if (!btn) return;                         // если на странице нет переключателя
+  if (!btn) return;                         
 
   btn.addEventListener('click', () => {
     const lang = document.documentElement.lang;
     if (lang === 'lv') {
-      window.location.href = '/ru/';        // латышский → русский
+      window.location.href = '/ru/';        
     } else {
-      window.location.href = '/';           // русский → латышский
+      window.location.href = '/';           
     }
   });
 });
