--- a/index.html
+++ b/index.html
@@ -564,14 +564,14 @@ Jūs esat Lieliski🙌</p>
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   const btn = document.querySelector('.lang-switch');
-  if (!btn) return;                         // если на странице нет переключателя
+  if (!btn) return;                         
 
   btn.addEventListener('click', () => {
     const lang = document.documentElement.lang;
     if (lang === 'lv') {
-      window.location.href = '/ru/';        // латышский → русский
+      window.location.href = '/ru/';        
     } else {
-      window.location.href = '/';           // русский → латышский
+      window.location.href = '/';           
     }
   });
 });
